Enabling ACH payment method (#40)
* feat: enabling ACH and adding mock for payment methods in the front-end

* fix: lint

* fix: applying code review

---------

Co-authored-by: daniloc <danilo.cardoso@adyen.com>

--- a/force-app/main/default/classes/AdyenPaymentRequestBuilder.cls
+++ b/force-app/main/default/classes/AdyenPaymentRequestBuilder.cls
@@ -1,9 +1,10 @@
 public with sharing class AdyenPaymentRequestBuilder {
     public static PaymentsRequest create(ClientDetails clientDetails, WebCart cart, Adyen_Adapter__mdt adyenAdapter) {
-        if (clientDetails.getPaymentMethodDetails() instanceof CardDetails) {
+        PaymentMethodDetails paymentMethodDetails = clientDetails.getPaymentMethodDetails();
+        if (paymentMethodDetails instanceof CardDetails) {
             return buildCardPaymentRequest(clientDetails, cart, adyenAdapter);
-        } else if (clientDetails.getPaymentMethodDetails() instanceof SepaDirectDebitDetails) {
-            return buildSepaPaymentRequest(clientDetails, cart, adyenAdapter);
+        } else if (paymentMethodDetails instanceof SepaDirectDebitDetails || paymentMethodDetails instanceof ACHDetails) {
+            return buildCommonPaymentsRequest(clientDetails, cart, adyenAdapter);
         } else {
             throw new AdyenB2BUtils.AdyenCustomException('Unhandled payment method of type: ' + clientDetails.paymentMethodType);
         }
@@ -15,10 +16,6 @@ public with sharing class AdyenPaymentRequestBuilder {
         paymentsRequest.authenticationData.threeDSRequestData = new ThreeDSRequestData();
         paymentsRequest.authenticationData.threeDSRequestData.nativeThreeDS = 'preferred';
         return paymentsRequest;
-    }
-
-    private static PaymentsRequest buildSepaPaymentRequest(ClientDetails clientDetails, WebCart cart, Adyen_Adapter__mdt adyenAdapter) {
-        return buildCommonPaymentsRequest(clientDetails, cart, adyenAdapter);
     }
 
     private static PaymentsRequest buildCommonPaymentsRequest(ClientDetails clientDetails, WebCart cart, Adyen_Adapter__mdt adyenAdapter) {
