feat: implementing save payment method for cards

--- a/force-app/main/default/classes/AdyenPaymentRequestBuilder.cls
+++ b/force-app/main/default/classes/AdyenPaymentRequestBuilder.cls
@@ -11,11 +11,19 @@ public with sharing class AdyenPaymentRequestBuilder {
     }
 
     private static PaymentsRequest buildCardPaymentRequest(ClientDetails clientDetails, WebCart cart, Adyen_Adapter__mdt adyenAdapter) {
-        PaymentsRequest paymentsRequest = buildCommonPaymentsRequest(clientDetails, cart, adyenAdapter);
-        paymentsRequest.authenticationData = new AuthenticationData();
-        paymentsRequest.authenticationData.threeDSRequestData = new ThreeDSRequestData();
-        paymentsRequest.authenticationData.threeDSRequestData.nativeThreeDS = 'preferred';
-        return paymentsRequest;
+        PaymentsRequest paymentRequest = buildCommonPaymentsRequest(clientDetails, cart, adyenAdapter);
+        paymentRequest.authenticationData = new AuthenticationData();
+        paymentRequest.authenticationData.threeDSRequestData = new ThreeDSRequestData();
+        paymentRequest.authenticationData.threeDSRequestData.nativeThreeDS = 'preferred';
+        CardDetails cardPaymentMethod = (CardDetails)clientDetails.getPaymentMethodDetails();
+        Boolean isFromSavedCard = cardPaymentMethod.storedPaymentMethodId != null;
+        if (clientDetails.storePaymentMethod || isFromSavedCard) {
+            paymentRequest.recurringProcessingModel = PaymentsRequest.RecurringProcessingModelEnum.CardOnFile;
+            paymentRequest.shopperInteraction = isFromSavedCard
+                ? PaymentsRequest.ShopperInteractionEnum.ContAuth
+                : paymentRequest.shopperInteraction;
+        }
+        return paymentRequest;
     }
 
     private static PaymentsRequest buildCommonPaymentsRequest(ClientDetails clientDetails, WebCart cart, Adyen_Adapter__mdt adyenAdapter) {
@@ -23,20 +31,22 @@ public with sharing class AdyenPaymentRequestBuilder {
         requestAmount.value = (cart.GrandTotalAmount * AdyenB2BUtils.getAmountMultiplier(cart.CurrencyIsoCode)).round(System.RoundingMode.HALF_UP);
         requestAmount.currency_x = cart.CurrencyIsoCode;
 
-        PaymentsRequest paymentsRequest = new PaymentsRequest();
-        paymentsRequest.paymentMethod = clientDetails.getPaymentMethodDetails();
-        paymentsRequest.merchantAccount = adyenAdapter.Merchant_Account__c;
-        paymentsRequest.amount = requestAmount;
-        paymentsRequest.reference = cart.Id;
-        paymentsRequest.shopperReference = cart.OwnerId;
-        paymentsRequest.shopperEmail = UserInfo.getUserEmail();
-        paymentsRequest.returnUrl = AdyenB2BUtils.getSiteUrl() + '/payment-processing';
-        paymentsRequest.billingAddress = clientDetails.getCompatibleBillingAddress();
-        paymentsRequest.browserInfo = clientDetails.getBrowserInfo();
-        paymentsRequest.applicationInfo = AdyenB2BUtils.getApplicationInfo(adyenAdapter.System_Integrator_Name__c);
-        paymentsRequest.channel = 'Web';
-        paymentsRequest.origin = AdyenB2BUtils.getSiteUrl();
+        PaymentsRequest paymentRequest = new PaymentsRequest();
+        paymentRequest.paymentMethod = clientDetails.getPaymentMethodDetails();
+        paymentRequest.storePaymentMethod = clientDetails.storePaymentMethod;
+        paymentRequest.merchantAccount = adyenAdapter.Merchant_Account__c;
+        paymentRequest.amount = requestAmount;
+        paymentRequest.reference = cart.Id;
+        paymentRequest.shopperReference = cart.OwnerId;
+        paymentRequest.shopperEmail = UserInfo.getUserEmail();
+        paymentRequest.returnUrl = AdyenB2BUtils.getSiteUrl() + '/payment-processing';
+        paymentRequest.billingAddress = clientDetails.getCompatibleBillingAddress();
+        paymentRequest.browserInfo = clientDetails.getBrowserInfo();
+        paymentRequest.applicationInfo = AdyenB2BUtils.getApplicationInfo(adyenAdapter.System_Integrator_Name__c);
+        paymentRequest.channel = 'Web';
+        paymentRequest.shopperInteraction = PaymentsRequest.ShopperInteractionEnum.Ecommerce;
+        paymentRequest.origin = AdyenB2BUtils.getSiteUrl();
 
-        return paymentsRequest;
+        return paymentRequest;
     }
 }
