--- a/force-app/main/default/classes/AdyenB2BConstants.cls
+++ b/force-app/main/default/classes/AdyenB2BConstants.cls
@@ -5,6 +5,8 @@ public with sharing class AdyenB2BConstants {
     public static final String MERCHANT_APP_NAME_FOR_APP_INFO = 'adyen-salesforce-b2b-lwr';
     public static final String MERCHANT_APP_VERSION_FOR_APP_INFO = '2.1.0';
 
+    public static final String PSP_REFERENCE_KEY = 'pspReferece';
+
     public static final String DEFAULT_PAYMENT_GATEWAY_NAME = 'Adyen';
     public static final String CARD_PAYMENT_METHOD_TYPE = 'scheme';
     public static final String SEPA_DIRECT_DEBIT = 'sepadirectdebit';
