--- a/force-app/main/default/classes/AdyenDropInController.cls
+++ b/force-app/main/default/classes/AdyenDropInController.cls
@@ -77,6 +77,7 @@ public with sharing class AdyenDropInController {
         paymentMethodsRequest.blockedPaymentMethods = new List<String>{AdyenB2BConstants.BANCONTACT_CARD_PAYMENT_METHOD_TYPE, AdyenB2BConstants.BANCONTACT_MOBILE_PAYMENT_METHOD_TYPE};
         paymentMethodsRequest.shopperLocale = shopperLocale;
         paymentMethodsRequest.countryCode = countryCode;
+        paymentMethodsRequest.shopperReference = cart.OwnerId;
 
         return paymentMethodsRequest;
     }
@@ -115,7 +116,7 @@ public with sharing class AdyenDropInController {
         postAuthRequest.paymentGroup.currencyIsoCode = webCart.CurrencyIsoCode;
 
         Map<String,String> additionalData = new Map<String,String>();
-        additionalData.put('pspReference', paymentsResp.pspReference);
+        additionalData.put(AdyenB2BConstants.PSP_REFERENCE_KEY, paymentsResp.pspReference);
         postAuthRequest.additionalData = additionalData;
 
         ConnectApi.PostAuthorizationResponse postAuthorizationResponse = Test.isRunningTest() ? mockPostAuthResponse() : ConnectApi.Payments.postAuth(postAuthRequest);
