feat: multiple merchant accounts wo sharing credentials

--- a/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
+++ b/force-app/main/default/classes/AdyenAuthWebhookHandler.cls
@@ -7,9 +7,9 @@ global without sharing class AdyenAuthWebhookHandler {
         RestRequest req = RestContext.request;
         try {
             HMACValidator validator = new HMACValidator();
-            Adyen_Adapter__mdt adyenAdapter = AdyenB2BUtils.retrieveAdyenAdapter(AdyenConstants.DEFAULT_ADAPTER_NAME);
             notificationRequestItem = parseAdyenNotificationRequest(req.requestBody.toString());
-            if (!Test.isRunningTest() && !validator.validateHMAC(notificationRequestItem, adyenAdapter.HMAC_Key__c)){
+            Adyen_Adapter__mdt adyenAdapter = AdyenB2BUtils.retrieveAdyenAdapterByMerchantAcct(notificationRequestItem.merchantAccountCode);
+            if (!Test.isRunningTest() && !validator.validateHMAC(notificationRequestItem, adyenAdapter.HMAC_Key__c)) {
                 return '[accepted] but not valid notification request';
             }
             if (!isValidNotification(notificationRequestItem)) {
@@ -23,7 +23,7 @@ global without sharing class AdyenAuthWebhookHandler {
             }
         } catch (Exception ex) {
             System.debug(LoggingLevel.ERROR, ex.getMessage());
-            if (ex instanceof HMACValidator.HmacValidationException){
+            if (ex instanceof HMACValidator.HmacValidationException) {
                 return '[accepted] but not valid notification request';
             } else {
                 LogEntry.insertLogException(ex, 'Adyen Auth Web Hook Handler Error', AdyenAuthWebhookHandler.class.getName(), 'doPost', req.requestBody?.toString());
@@ -34,7 +34,7 @@ global without sharing class AdyenAuthWebhookHandler {
 
     private static NotificationRequestItem parseAdyenNotificationRequest(String requestBody) {
         String requestBodySFCompatible = AdyenB2BUtils.makeSalesforceCompatible(requestBody);
-        AdyenNotification adyenNotification  = (AdyenNotification)JSON.deserialize(requestBodySFCompatible, AdyenNotification.class);
+        AdyenNotification adyenNotification = (AdyenNotification)JSON.deserialize(requestBodySFCompatible, AdyenNotification.class);
         NotificationRequestItem notificationRequestItem = adyenNotification.notificationItems[0].NotificationRequestItem;
         return notificationRequestItem;
     }
