--- a/force-app/main/default/classes/AdyenB2BUtilsTest.cls
+++ b/force-app/main/default/classes/AdyenB2BUtilsTest.cls
@@ -1,7 +1,7 @@
 @IsTest
 private class AdyenB2BUtilsTest {
     @IsTest
-    private static void retrieveAdyenAdapterTest() {
+    static void retrieveAdyenAdapterTest() {
         // given - custom metadata type is visible in test scenario
         // when
         Adyen_Adapter__mdt adyenAdapter = AdyenB2BUtils.retrieveAdyenAdapter(AdyenConstants.DEFAULT_ADAPTER_NAME);
@@ -10,7 +10,18 @@ private class AdyenB2BUtilsTest {
     }
 
     @IsTest
-    private static void makePostRequestTest() {
+    static void retrieveAdyenAdapterByMerchantAcctTest() {
+        // given
+        String merchantAccountName = [SELECT Merchant_Account__c FROM Adyen_Adapter__mdt LIMIT 1].Merchant_Account__c;
+        // when
+        Adyen_Adapter__mdt adyenAdapter = AdyenB2BUtils.retrieveAdyenAdapterByMerchantAcct(merchantAccountName);
+        // then
+        Assert.isNotNull(adyenAdapter);
+        Assert.areEqual(merchantAccountName, adyenAdapter.Merchant_Account__c);
+    }
+
+    @IsTest
+    static void makePostRequestTest() {
         // given
         Adyen_Adapter__mdt adyenAdapter = AdyenB2BUtils.retrieveAdyenAdapter(AdyenConstants.DEFAULT_ADAPTER_NAME);
         Test.setMock(HttpCalloutMock.class, new TestDataFactory.PaymentMethodsSuccessMock());
@@ -24,7 +35,7 @@ private class AdyenB2BUtilsTest {
     }
 
     @IsTest
-    private static void makePostRequestErrorTest() {
+    static void makePostRequestErrorTest() {
         // given
         Adyen_Adapter__mdt adyenAdapter = AdyenB2BUtils.retrieveAdyenAdapter(AdyenConstants.DEFAULT_ADAPTER_NAME);
         Test.setMock(HttpCalloutMock.class, new TestDataFactory.GenericErrorMock());
@@ -40,7 +51,7 @@ private class AdyenB2BUtilsTest {
     }
 
     @IsTest
-    private static void getApplicationInfoTest() {
+    static void getApplicationInfoTest() {
         // given
         String systemIntegrator = 'test';
         // when
@@ -57,7 +68,7 @@ private class AdyenB2BUtilsTest {
     }
 
     @IsTest
-    private static void getSiteUrlTest() {
+    static void getSiteUrlTest() {
         // given - cannot simulate network id in test environment
         // when
         Test.startTest();
@@ -69,7 +80,7 @@ private class AdyenB2BUtilsTest {
     }
 
     @IsTest(SeeAllData=true)
-    private static void fetchCartDetailsTest() {
+    static void fetchCartDetailsTest() {
         // given
         Decimal unitPrice = 10.99;
         String currencyIsoCode = TestDataFactory.ACTIVE_CURRENCY;
@@ -91,7 +102,7 @@ private class AdyenB2BUtilsTest {
     }
 
     @IsTest
-    private static void isPaymentAcceptedTest() {
+    static void isPaymentAcceptedTest() {
         // given authorised
         PaymentsResponse.ResultCodeEnum paymentResultCode = PaymentsResponse.ResultCodeEnum.AUTHORISED;
         // when
@@ -122,7 +133,7 @@ private class AdyenB2BUtilsTest {
     }
 
     @IsTest
-    private static void safeAssignTextFieldValueTest() {
+    static void safeAssignTextFieldValueTest() {
         // given
         String text = 'sample';
         // when
@@ -141,7 +152,7 @@ private class AdyenB2BUtilsTest {
     }
 
     @IsTest
-    private static void getAmountMultiplierTest() {
+    static void getAmountMultiplierTest() {
         // given 3 decimal places currency
         String currencyCode = 'JOD';
         // when
